# Taller1

./: CMakeLists.txt  Cliente.glade  Editor.glade  Makefile  README.md  cmake_install.cmake  install_manifest.txt  libraries_test.cpp
Cliente/src/: Makefile  client_Cliente.h  client_Controlador.cpp  client_ControladorSDL.cpp  client_CopiadorTextura.h  client_ManejadorEventos.h  client_TexturaSDL.h  client_Vista.cpp  client_main.cpp  cmake_install.cmake
Common/src/: AdministradorDeNiveles.cpp  AdministradorDeNiveles.h  Arma.cpp  Arma.h  Bala.cpp  Bala.h  BlockingQueue.cpp  BlockingQueue.h  ChequeadorColisionesFunctor.cpp  ChequeadorColisionesFunctor.h  ClienteEnviadorTh.cpp  ClienteEnviadorTh.h  ClienteRecibidorTh.cpp  ClienteRecibidorTh.h  ClienteTh.h  ColectorDeEventosFunctor.cpp  ColectorDeEventosFunctor.h  ColectorEventosParticulares.cpp  ColectorEventosParticulares.h  Conejo.cpp  Conejo.h  CopiadorFunctor.cpp  CopiadorFunctor.h  DuetFunctor.cpp  DuetFunctor.h  Elemento.cpp  Elemento.h  ElementoGraficable.cpp  ElementoGraficable.h  Evento.cpp  Evento.h  EventoConejoPerdioVida.cpp  EventoConejoPerdioVida.h  EventoElementoDestruido.cpp  EventoElementoDestruido.h  EventoFinDeNivel.cpp  EventoFinDeNivel.h  EventoMovimiento.cpp  EventoMovimiento.h  EventoNuevoPersonaje.cpp  (+59 more)
Servidor/src/: Client.cpp  Client.h  ConversorDeNivelAModelo.cpp  ConversorDeNivelAModelo.h  ConversorDeTeclasFunctor.cpp  ConversorDeTeclasFunctor.h  EventoGanador.cpp  EventoGanador.h  EventoMatcheo.cpp  EventoMatcheo.h  GeneradorConejoModelo.cpp  GeneradorConejoModelo.h  GeneradorTortugasFunctor.cpp  GeneradorTortugasFunctor.h  LanzadorDeEventosFunctor.cpp  LanzadorDeEventosFunctor.h  LevantadorDeNivelesFunctor.cpp  LevantadorDeNivelesFunctor.h  Makefile  Makefile_server  NotificadorEventoFunctor.cpp  NotificadorEventoFunctor.h  NotificadorEventosFunctor.cpp  NotificadorEventosFunctor.h  NotificadorFunctor.cpp  NotificadorFunctor.h  Observable.cpp  Observable.h  Observador.cpp  Observador.h  cmake_install.cmake  server_AceptadorTh.cpp  server_AceptadorTh.h  server_BaseDeDatos.cpp  server_BaseDeDatos.h  server_ClientHandler.cpp  server_ClientHandler.h  server_HiloMuerto.cpp  server_HiloMuerto.h  server_Monitor.cpp  (+6 more)
Servidor/src/Historial/: 2015-03-22
